--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,12 @@
   font-weight: normal;
   font-style: normal;
 }
+
+
 .project{
   margin: 0 50px;
   margin-top: 40px;
-  height: 400px;
+  height: 350px;
   left: 0px;
   top: 0px;
   background: #F5F6F9;
@@ -37,8 +39,9 @@
 
 .project h3{
   font-family: 'Circe';
-  width: 212px;
+  width: 15%;
   margin: 40px;
+  margin-right: 70px;
   margin-bottom: 0px;
   font-weight: 400;
   font-size: 24px;
@@ -53,7 +56,7 @@
 
 .project .subtitle{
   margin-top: 40px;
-  width: 288px;
+  width: 30%;
   height: 75px;
   font-family: 'Circe';
   font-style: normal;
@@ -66,14 +69,14 @@
 
 .project h2{
   position: absolute;
-  width: 863px;
+  width: 40%;
   height: 195px;
   left: 40px;
   top: 179px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 180px;
+  font-size: 140px;
   line-height: 108.5%;
   color: #26252A;
 }
@@ -81,17 +84,17 @@
 /* Woman */
 .woman{
   position: absolute;
-  width: 540px;
-  height: 840px;
-  left: 767px;
+  width: 42%;
+  height: 740px;  
+  left: 53%;
   top: 0px;
-  background: url(../img/woman_header.png);
+  background: url(../img/woman_header.png) center/cover no-repeat;
 }
 
 /* Top */
 .top{
   margin: 0 50px;
-  height: 400px;
+  height: 342px;
   left: 0px;
   top: 0px;
   background: #014AEB;
@@ -158,33 +161,33 @@
   margin-left: 50px;
   font-family: 'Halvar Breitschrift';
   font-weight: 800;
-  font-size: 56px;
+  font-size: 50px;
   color: #26252A;
 }
 
 .about .about_our_all{
   display: flex;
   justify-content: center;
-  margin: 25px 50px;
+  margin: 20px 40px;
 }
 
 .about .about_our_all .about_our{
-  width: 480px;
-  height: 352px;
+  width: 35%;
+  height: 300px;
   background: #F5F6F9;
   border-radius: 30px;
   margin: 0 10px;
 }
 
 .about .about_our_all .about_our:first-child{
-  width: 310px;
-  height: 352px;
+  width: 20%;
+  height: 300px;
 }
 
 .about .about_our_all .about_our:last-child{
-  width: 480px;
-  height: 352px;
-  background: url(../img/1.png);
+  width: 35%;
+  height: 300px;
+  background: url(../img/1.png) center/cover no-repeat;
   border-radius: 30px;
 }
 
@@ -192,27 +195,27 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 40px;
+  font-size: 30px;
   line-height: 108.5%;
   color: #26252A;
   margin: 40px;
 }
 
 .about .about_our_all .about_our .about_our_descr_1{
-  margin: 84px 40px 40px 50px;
+  margin: 84px 20px 30px 50px;
   font-family: 'Circe';
-  font-weight: 700;
-  font-size: 20px;
+  font-weight: 40%;
+  font-size: 16px;
   line-height: 140%;
   color: rgba(38, 37, 42, 0.7);
 }
 
 .about .about_our_all .about_our .about_our_descr{
-  margin: 84px 40px 40px 50px;
+  margin: 84px 30px 40px 50px;
   margin-top: 152px;
   font-family: 'Circe'; 
   font-weight: 700;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 140%;
   color: rgba(38, 37, 42, 0.7);
 }
@@ -226,12 +229,13 @@
   top: 0px;
   background: #EA5F70;
   border-radius: 42px;
+  position: relative;
 }
 .directions .directions_title{
   margin-left: 40px;
   margin-top: 60px;
   padding-top: 60px;
-  width: 576px;
+  width: 40%;
   height: 122px;
   left: 40px;
   top: 60px;
@@ -251,7 +255,7 @@
 
 .directions .directions_descr{
   position: absolute;
-  width: 305px;
+  width: 10px;
   height: 232px;
   left: 1050px;
   top: 157px;
@@ -267,14 +271,15 @@
 .directions .woman{
   position: absolute;
   left: 297.26px;
-  width: 717.38px;
-  background: url(../img/woman_directions.png) no-repeat;
+  width: 70%;
+  height: 100%;
+  background: url(../img/woman_directions.png) center/cover no-repeat;
   z-index: 2;
 }
 
 .directions li{
-  width: 232px;
-  height: 213px;
+  width: 17%;
+  height: 20%;
   background: #FFFFFF;
   border-radius: 30px;
   z-index: 3;
@@ -299,12 +304,12 @@
 
 .directions .directions_menu_items{
   margin-top: 50px;
-  width: 162px;
+  width: 20%;
   height: 58px;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 2vh;
   line-height: 120%;
   color: #26252A;
 }
@@ -342,7 +347,6 @@
 
 .container{
   margin-left: 50px;
-  margin-right: 50px;
 }
 
 .comment{
@@ -352,7 +356,7 @@
 }
 
 .comment .comment_woman{
-  width: 600px;
+  width: 150%;
   height: 385px;
   position: relative;
   background: #F5F6F9;
@@ -366,12 +370,12 @@
 }
 
 .comment .comment_descr{
-  width: 500px;
+  width: 110%;
   height: 280px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 24px;
+  font-size: 2.5vh;
   line-height: 145%;
   color: #26252A;
   margin-left: 15px;
@@ -389,8 +393,8 @@
 }
 
 .comment .comment_quotes{
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   margin-left: 200px;
 }
 
@@ -399,8 +403,8 @@
 }
 
 .point .point_story{
-  width: 805px;
-  height: 461px;
+  width: 100%;
+  height: 100%;
   background: #EA5F70;
   border-radius: 30px;
 }
@@ -408,7 +412,7 @@
 .point .point_title{
   padding-top: 50px;
   margin-left: 40px;
-  width: 407px;
+  width: 100%;
   height: 43px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
@@ -418,15 +422,19 @@
   color: #FFFFFF;
 }
 
+.point img{
+  width: 100%;
+}
+
 .point .point_descr{
-  margin-top: 150px;
+  margin-top: 70px;
   margin-left: 50px;
-  width: 694px;
+  width: 75%;
   height: 238px;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 2.3vh;
   line-height: 140%;
   color: #FFFFFF;
 }
@@ -437,7 +445,7 @@
 
 .result .result_title{
   font-family: 'Halvar Breitschrift';
-  font-weight: 800;
+  font-weight: 50%;
   font-size: 56px;
   color: #26252A;
 }
@@ -445,8 +453,8 @@
 .result .result_example{
   display: flex;
   padding: 40px;
-  width: 1400px;
-  height: 565px;
+  width: 105%;
+  height: 75vh;
   background: #014AEB;
   border-radius: 30px;
   margin: 0 auto;
@@ -454,26 +462,26 @@
 
 .result .result_example .result_example_item{
   margin: 0 7px;
-  width: 396.67px;
-  height: 405px;
+  width: 14%;
+  height: 50vh;
   background: #FFFFFF;
   border-radius: 30px;
 }
 .result .result_example_item_descr{
-  padding: 40px;
+  padding: 30px;
   padding-top: 0px;
   font-family: 'Circe';
   font-weight: 700;
-  font-size: 18px;
+  font-size: 2vh;
   line-height: 130%;
   color: rgba(38, 37, 42, 0.7);
 }
 
 .result .result_example_item_title{
   font-family: 'Halvar Breitschrift';
-  padding: 40px;
+  padding: 30px;
   font-weight: 800;
-  font-size: 24px;
+  font-size: 2.1vh;
   color: #26252A;
 }
 
@@ -486,30 +494,30 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 56px;
+  font-size: 8vh;
   line-height: 108.5%;
   color: #26252A;
 }
 
 .result_conclusion .descr{
   margin-left: 120px;
-  width: 804px;
+  width: 90%;
   height: 140px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 3vh;
   line-height: 145%;
   color: #26252A;
 }
 
 .result_statistics{
-  margin-top: 25px;
+  margin-top: 30px;
 }
 
 .result_statistics .result_statistics_rising{
-  width: 480px;
-  height: 520px;
+  width: 90%;
+  height: 400px;
   background: #EA5F70;
   border-radius: 30px;
 }
@@ -519,7 +527,7 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 40px;
+  font-size: 4vh;
   color: #FFFFFF;
 }
 
@@ -534,39 +542,57 @@
 }
 
 .result_statistics .result_statistics_gr{
+  transform: translateX(-9%);
   position: relative;
-  margin-left: 100px;
+  margin-left: 0px;
 }
 
 .result_statistics_gr img{
-  opacity: 0;
-}
-
-.result_statistics_gr img.element-show{
-  opacity: 1;
-  transition: opacity 1s;
+  width: 120%;
 }
 
 .result_statistics_gr .data_1{
   position: absolute;
-  top: 341px;
-  right: -155px;
-  width: 400px;
-  height: 70px;
+  padding: 5px;
+  top: 50%;
+  right: -3%;
+  width: 80%;
+  height: 20%;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 3vh;
   line-height: 35px;
   color: #FFFFFF;
-  width: 440px;
-  height: 100px;
   background: #EA5F70;
   border-radius: 10px;
   opacity: 0;
 }
 
+.result_statistics_gr .data_2{
+  position: absolute;
+  padding: 5px;
+  top: 20%;
+  right: 15%;
+  width: 80%;
+  height: 20%;
+  font-family: 'Circe';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 3vh;
+  line-height: 35px;
+  color: #FFFFFF;
+  background: #014AEB;
+  border-radius: 10px;
+  opacity: 0;
+}
+
 .result_statistics_gr .data_1.element-show{
+  opacity: 1;
+  transition: opacity 3s;
+}
+
+.result_statistics_gr .data_2.element-show{
   opacity: 1;
   transition: opacity 3s;
 }
@@ -582,11 +608,11 @@
 }
 
 .result_statistics .result_statistics_rising_2{
-  width: 480px;
-  height: 520px;
+  width: 90%;
+  height: 56vh;
   background: #EA5F70;
   border-radius: 30px;
-  margin-left: 240px;
+  margin-left: 100px;
   margin-top: 40px;
 }
 
@@ -595,12 +621,20 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 40px;
+  font-size: 3.3vh;
   color: #FFFFFF;
 }
 
+.result_statistics .result_statistics_rising_2 .descr{
+  font-size: 2.5vh;
+}
+.img_statistic_2{
+  display: block;
+  width: 100%;
+}
+
 .result_statistics .result_statistics_gr_2{
-  opacity: 0;
+  width: 120%;
   margin-left: 0px;
   margin-top: 40px;
 }
@@ -610,10 +644,10 @@
 }
 
 .result_statistics .result_statistics_gr_2 .data_1{
-  top: 27px;
-  left: 120px;
+  top: 10%;
+  left: 6%;
   position: absolute;
-  width: 440px;
+  width: 70%;
   height: 100px;
   background: #014AEB;
   border-radius: 10px;
@@ -627,10 +661,10 @@
 }
 
 .result_statistics .result_statistics_gr_2 .data_2{
-  top: 267px;
-  left: 127px;
+  top: 45%;
+  left: 8%;
   position: absolute;
-  width: 440px;
+  width: 70%;
   height: 100px;
   background: #EA5F70;
   border-radius: 10px;
@@ -655,9 +689,8 @@
 .increase{
   position: relative;
   padding: 40px;
-  gap: 40px;
-  width: 1380px;
-  height: 641px;
+  width: 107%;
+  height: 75vh;
   background: #014AEB;
   border-radius: 30px;
 }
@@ -667,7 +700,7 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 24px;
+  font-size: 2.2vh;
   line-height: 140%;
   text-align: center;
   color: #FFFFFF;
@@ -683,56 +716,76 @@
   height: 104px;
   left: 0px;
   top: 65px;
-
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 130px;
+  font-size: 15vh;
   line-height: 80%;
-  /* identical to box height, or 104px */
-
   text-align: center;
   letter-spacing: -0.115em;
-
   color: #FFFFFF;
 }
 .increase .v2 .v{
   position: absolute;
   width: 255px;
   height: 176px;
-  left: 93px;
-  top: -58px;
+  left: 70px;
+  top: -52px;
 
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 220px;
+  font-size: 25vh;
   line-height: 80%;
-  /* identical to box height, or 176px */
-
   text-align: center;
-
   color: #FFFFFF;
+}
+.increase .data_1{
+  position: absolute;
+  padding: 5px;
+  top: 13%;
+  right: -3%;
+  width: 60%;
+  height: 35%;
+  font-family: 'Circe';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2.5vh;
+  line-height: 35px;
+  color: #FFFFFF;
+  background: #EA5F70;
+  border-radius: 10px;
+  opacity: 0;
+}
+
+.increase .data_1.element-show{
+  transition: opacity 3s;
+  opacity: 1;
 }
 
 .increase .subdescr{
   position: absolute;
   width: 327px;
   height: 144px;
-  left: 30px;
+  left: 0px;
   top: 289px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 40px;
+  font-size: 4vh;
   line-height: 120%;
   text-align: center;
   color: rgba(255, 255, 255, 0.6);
 }
 
+.increase2 img {
+  width: 100%;
+}
+
 .increase2 .statistics{
-  width: 805px;
-  height: 453px;
+  padding: 10px;
+  width: 110%;
+  height: 110%;
   background: #FFFFFF;
   border-radius: 30px;
   transform: translateX(-80px) translateY(15px);
@@ -743,9 +796,8 @@
 }
 
 .total .summary{
-  width: 850px;
-  height: 377px;
-
+  width: 100%;
+  height: 100%;
   background: #F5F6F9;
   border-radius: 30px;
 }
@@ -754,37 +806,41 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 56px;
+  font-size: 5vh;
   color: #26252A;
-  padding: 40px;
+  padding: 30px;
+  padding-bottom: 0px;
 }
 
 .total .summary .descr{
-  width: 694px;
+  width: 100%;
   height: 136px;
-  padding: 40px;
+  padding: 30px;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 3vh;
   line-height: 140%;
   color: #26252A;
 }
 .total img{
-  transform: translateX(50px);
+  transform: translateX(-50px);
+  width: 250%;
 }
 
 .future{
   margin-top: 15px;
-  width: 1380px;
-  height: 680px;
+  width: 107%;
+  height: 100%;
   position: relative;
   background: #EA5F70;
   border-radius: 42px;
   margin-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 .future img{
+  height: 100%;
   position: absolute;
   left: 0px;
   top: 0px;
@@ -792,14 +848,14 @@
 
 .future .title{
   position: absolute;
-  width: 610px;
+  width: 40%;
   height: 192px;
   left: 650px;
   top: 59px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 40px;
+  font-size: 4vh;
   line-height: 120%;
   color: #FFFFFF;
 }
@@ -811,7 +867,7 @@
 
 .future .advice_item{
   margin-top: 430px;
-  width: 396.67px;
+  width: 30%;
   height: 204px;
   background: #FFFFFF;
   border-radius: 30px;
@@ -823,7 +879,7 @@
   padding-bottom: 20px;
   font-family: 'Halvar Breitschrift';
   font-weight: 800;
-  font-size: 24px;
+  font-size: 2.3vh;
   color: #26252A;
 }
 
@@ -832,9 +888,14 @@
   padding-top: 0px;
   font-family: 'Circe';
   font-weight: 700;
-  font-size: 18px;
+  font-size: 2vh;
   line-height: 130%;
   color: rgba(38, 37, 42, 0.7);
+}
+
+.container_1{
+  margin: 0px;
+  padding: 0px;
 }
 
 /* slider */
