--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
+  /* outline: 5px solid green; */
+  padding: 0px;
 }
 /*Header*/
 @font-face {
@@ -23,11 +25,17 @@
   font-style: normal;
 }
 
+.container_1{
+  margin: 0 auto;
+  padding: 0px;
+  position: relative;
+  max-width: 1300px;
+}
 
 .project{
-  margin: 0 50px;
   margin-top: 40px;
-  height: 350px;
+  width: 1300px;
+  height: 400px;
   left: 0px;
   top: 0px;
   background: #F5F6F9;
@@ -56,7 +64,7 @@
 
 .project .subtitle{
   margin-top: 40px;
-  width: 30%;
+  width: 288px;
   height: 75px;
   font-family: 'Circe';
   font-style: normal;
@@ -84,19 +92,18 @@
 /* Woman */
 .woman{
   position: absolute;
-  width: 42%;
-  height: 740px;  
+  width: 540px;
+  height: 840px;  
   left: 53%;
-  top: 0px;
-  background: url(../img/woman_header.png) center/cover no-repeat;
+  top: -37px;
+  background: url(../img/woman_header.png) center  no-repeat;
 }
 
 /* Top */
 .top{
-  margin: 0 50px;
-  height: 342px;
-  left: 0px;
-  top: 0px;
+  width: 1300px;
+  height: 400px;
+  margin-top: -5px;
   background: #014AEB;
   border-radius: 40px;
 }
@@ -141,12 +148,11 @@
 }
 
 .top .top_descr{
-  margin-left: 40px;
-  margin-top: 57px;
+  position: absolute;
   width: 474px;
   height: 175px;
   left: 40px;
-  top: 196px;
+  bottom: 29px;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 400;
@@ -158,7 +164,6 @@
 /* about */
 .about .about_title{
   margin-top: 60px;
-  margin-left: 50px;
   font-family: 'Halvar Breitschrift';
   font-weight: 800;
   font-size: 50px;
@@ -167,66 +172,75 @@
 
 .about .about_our_all{
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  margin: 20px 0px;
+}
+
+.about .about_our_1{
   margin: 20px 40px;
 }
 
 .about .about_our_all .about_our{
-  width: 35%;
-  height: 300px;
+  width: 480px;
+  height: 352px;
   background: #F5F6F9;
   border-radius: 30px;
   margin: 0 10px;
 }
 
 .about .about_our_all .about_our:first-child{
-  width: 20%;
-  height: 300px;
+  width: 310px;
+  height: 352px;
 }
 
 .about .about_our_all .about_our:last-child{
-  width: 35%;
-  height: 300px;
+  width: 480px;
+  height: 352px;
   background: url(../img/1.png) center/cover no-repeat;
   border-radius: 30px;
 }
 
 .about .about_our_all .about_our .about_our_title{
+  width: 164px;
+  height: 86px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 30px;
+  font-size: 40px;
   line-height: 108.5%;
   color: #26252A;
-  margin: 40px;
+  padding: 40px;
 }
 
 .about .about_our_all .about_our .about_our_descr_1{
-  margin: 84px 20px 30px 50px;
+  margin: 125px 40px 30px 50px;
+  width: 220px;
+  height: 102px;
   font-family: 'Circe';
-  font-weight: 40%;
-  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
   line-height: 140%;
   color: rgba(38, 37, 42, 0.7);
 }
 
 .about .about_our_all .about_our .about_our_descr{
-  margin: 84px 30px 40px 50px;
-  margin-top: 152px;
-  font-family: 'Circe'; 
+  margin: 190px 30px 40px 50px;
+  width: 391px;
+  height: 34px;
+  font-family: 'Circe';
+  font-style: normal;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 24px;
   line-height: 140%;
   color: rgba(38, 37, 42, 0.7);
 }
 
 .directions{
-  margin-left: 50px;
-  margin-right: 50px;
   position: relative;
   height: 680px;
-  left: 0px;
-  top: 0px;
+  width: 1300px;
+  height: 680px;
   background: #EA5F70;
   border-radius: 42px;
   position: relative;
@@ -235,7 +249,7 @@
   margin-left: 40px;
   margin-top: 60px;
   padding-top: 60px;
-  width: 40%;
+  width: 576px;
   height: 122px;
   left: 40px;
   top: 60px;
@@ -255,9 +269,9 @@
 
 .directions .directions_descr{
   position: absolute;
-  width: 10px;
+  width: 305px;
   height: 232px;
-  left: 1050px;
+  left: 954px;
   top: 157px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
@@ -265,21 +279,22 @@
   font-size: 24px;
   line-height: 120%;
   color: #FFFFFF;
-  z-index: 1;
+  z-index: 2;
 }
 
 .directions .woman{
-  position: absolute;
-  left: 297.26px;
-  width: 70%;
   height: 100%;
-  background: url(../img/woman_directions.png) center/cover no-repeat;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 20px;
+  background: url(../img/woman_directions.png) center  no-repeat;
   z-index: 2;
 }
 
 .directions li{
-  width: 17%;
-  height: 20%;
+  width: 232px;
+  height: 213px;
   background: #FFFFFF;
   border-radius: 30px;
   z-index: 3;
@@ -304,18 +319,17 @@
 
 .directions .directions_menu_items{
   margin-top: 50px;
-  width: 20%;
   height: 58px;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
-  font-size: 2vh;
+  font-size: 24px;
   line-height: 120%;
   color: #26252A;
 }
 
 .target{
-  margin: 60px 50px 0 50px;
+  margin-top: 60px;
   height: 600px;
   background: #014AEB;
   border-radius: 30px;
@@ -334,6 +348,8 @@
   margin: auto;
   margin-top: 126px;
   display: block;
+  width: 995px;
+  height: 230px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
@@ -341,24 +357,19 @@
   line-height: 108.5%;
   text-align: center;
   color: #FFFFFF;
-  width: 995px;
-  height: 230px;
 }
 
-.container{
-  margin-left: 50px;
-}
 
 .comment{
   display: flex;
-  justify-content: right;
+  justify-content: space-between;
   margin-top: 80px;
 }
 
 .comment .comment_woman{
-  width: 150%;
+  width: 580px;
   height: 385px;
-  position: relative;
+  top: 62px;
   background: #F5F6F9;
   border-radius: 20px;
 }
@@ -370,15 +381,16 @@
 }
 
 .comment .comment_descr{
-  width: 110%;
+  width: 495px;
   height: 280px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 2.5vh;
+  font-size: 24px;
   line-height: 145%;
   color: #26252A;
-  margin-left: 15px;
+  margin-right: 40px;
+  transform: translateX(-110px);
 }
 
 .comment .comment_descr span{
@@ -393,9 +405,9 @@
 }
 
 .comment .comment_quotes{
-  width: 50px;
-  height: 50px;
-  margin-left: 200px;
+  width: 80px;
+  height: 80px;
+  margin-left: 100px;
 }
 
 .point{
@@ -427,14 +439,14 @@
 }
 
 .point .point_descr{
-  margin-top: 70px;
+  margin-top: 175px;
   margin-left: 50px;
-  width: 75%;
+  width: 644px;
   height: 238px;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
-  font-size: 2.3vh;
+  font-size: 24px;
   line-height: 140%;
   color: #FFFFFF;
 }
@@ -445,16 +457,17 @@
 
 .result .result_title{
   font-family: 'Halvar Breitschrift';
-  font-weight: 50%;
+  font-weight: 800;
   font-size: 56px;
   color: #26252A;
 }
 
 .result .result_example{
   display: flex;
+  justify-content: right;
   padding: 40px;
-  width: 105%;
-  height: 75vh;
+  width: 1300px;
+  height: 565px;
   background: #014AEB;
   border-radius: 30px;
   margin: 0 auto;
@@ -462,8 +475,8 @@
 
 .result .result_example .result_example_item{
   margin: 0 7px;
-  width: 14%;
-  height: 50vh;
+  width: 396.67px;
+  height: 405px;
   background: #FFFFFF;
   border-radius: 30px;
 }
@@ -472,7 +485,7 @@
   padding-top: 0px;
   font-family: 'Circe';
   font-weight: 700;
-  font-size: 2vh;
+  font-size: 18px;
   line-height: 130%;
   color: rgba(38, 37, 42, 0.7);
 }
@@ -481,7 +494,7 @@
   font-family: 'Halvar Breitschrift';
   padding: 30px;
   font-weight: 800;
-  font-size: 2.1vh;
+  font-size: 24px;
   color: #26252A;
 }
 
@@ -491,24 +504,26 @@
 
 .result_conclusion .title{
   height: 200px;
+  width: 388px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 8vh;
+  font-size: 56px;
   line-height: 108.5%;
   color: #26252A;
 }
 
 .result_conclusion .descr{
-  margin-left: 120px;
-  width: 90%;
+  margin-left: -45px;
+  width: 804px;
   height: 140px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 700;
-  font-size: 3vh;
+  font-size: 24px;
   line-height: 145%;
   color: #26252A;
+  transform: translateX(-10px);
 }
 
 .result_statistics{
@@ -516,8 +531,8 @@
 }
 
 .result_statistics .result_statistics_rising{
-  width: 90%;
-  height: 400px;
+  width: 480px;
+  height: 520px;
   background: #EA5F70;
   border-radius: 30px;
 }
@@ -527,7 +542,7 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 4vh;
+  font-size: 40px;
   color: #FFFFFF;
 }
 
@@ -542,13 +557,13 @@
 }
 
 .result_statistics .result_statistics_gr{
-  transform: translateX(-9%);
+  transform: translateX(-8%);
   position: relative;
   margin-left: 0px;
 }
 
 .result_statistics_gr img{
-  width: 120%;
+  height: 520px;
 }
 
 .result_statistics_gr .data_1{
@@ -608,11 +623,11 @@
 }
 
 .result_statistics .result_statistics_rising_2{
-  width: 90%;
-  height: 56vh;
+  width: 480px;
+  height: 520px;
   background: #EA5F70;
   border-radius: 30px;
-  margin-left: 100px;
+  margin-left: 50px;
   margin-top: 40px;
 }
 
@@ -634,10 +649,12 @@
 }
 
 .result_statistics .result_statistics_gr_2{
-  width: 120%;
+  width: 805px;
+  height: 520px;
   margin-left: 0px;
   margin-top: 40px;
 }
+
 .result_statistics .result_statistics_gr_2.element-show{
   opacity: 1;
   transition: opacity 1s;
@@ -689,10 +706,11 @@
 .increase{
   position: relative;
   padding: 40px;
-  width: 107%;
-  height: 75vh;
+  width: 100%;
+  height: 641px;
   background: #014AEB;
   border-radius: 30px;
+  margin-top: 15px;
 }
 .increase .title{
   height: 68px;
@@ -700,26 +718,23 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 2.2vh;
+  font-size: 24px;
   line-height: 140%;
   text-align: center;
   color: #FFFFFF;
 }
 
-.increase{
-  margin-top: 15px;
-}
 
 .increase .v2{
   position: absolute;
   width: 93px;
   height: 104px;
-  left: 0px;
+  left: 30px;
   top: 65px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 15vh;
+  font-size: 130px;
   line-height: 80%;
   text-align: center;
   letter-spacing: -0.115em;
@@ -735,18 +750,18 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 25vh;
+  font-size: 220px;
   line-height: 80%;
   text-align: center;
   color: #FFFFFF;
 }
 .increase .data_1{
   position: absolute;
-  padding: 5px;
+  padding: 15px;
   top: 13%;
-  right: -3%;
-  width: 60%;
-  height: 35%;
+  right: -4%;
+  width: 440px;
+  height: 132px;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
@@ -767,8 +782,8 @@
   position: absolute;
   width: 327px;
   height: 144px;
-  left: 0px;
-  top: 289px;
+  left: 40px;
+  top: 320px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
@@ -783,9 +798,10 @@
 }
 
 .increase2 .statistics{
+  margin-top: 30px;
   padding: 10px;
-  width: 110%;
-  height: 110%;
+  width: 100%;
+  height: 100%;
   background: #FFFFFF;
   border-radius: 30px;
   transform: translateX(-80px) translateY(15px);
@@ -796,7 +812,7 @@
 }
 
 .total .summary{
-  width: 100%;
+  width: 810px;
   height: 100%;
   background: #F5F6F9;
   border-radius: 30px;
@@ -806,20 +822,21 @@
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 5vh;
+  font-size: 56px;
   color: #26252A;
   padding: 30px;
   padding-bottom: 0px;
 }
 
 .total .summary .descr{
-  width: 100%;
+  width: 694px;
   height: 136px;
-  padding: 30px;
+  margin-top: 100px;
+  padding-left: 30px;
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
-  font-size: 3vh;
+  font-size: 24px;
   line-height: 140%;
   color: #26252A;
 }
@@ -830,8 +847,8 @@
 
 .future{
   margin-top: 15px;
-  width: 107%;
-  height: 100%;
+  width: 100%;
+  height: 680px;
   position: relative;
   background: #EA5F70;
   border-radius: 42px;
@@ -848,14 +865,14 @@
 
 .future .title{
   position: absolute;
-  width: 40%;
+  width: 610px;
   height: 192px;
   left: 650px;
   top: 59px;
   font-family: 'Halvar Breitschrift';
   font-style: normal;
   font-weight: 800;
-  font-size: 4vh;
+  font-size: 40px;
   line-height: 120%;
   color: #FFFFFF;
 }
@@ -867,7 +884,7 @@
 
 .future .advice_item{
   margin-top: 430px;
-  width: 30%;
+  width: 396.67px;
   height: 204px;
   background: #FFFFFF;
   border-radius: 30px;
@@ -875,27 +892,25 @@
 }
 
 .future .advice_item .title_item{
-  padding: 40px;
-  padding-bottom: 20px;
+  padding: 40px 30px;
+  width: 316.67px;
+  height: 58px;
   font-family: 'Halvar Breitschrift';
+  font-style: normal;
   font-weight: 800;
-  font-size: 2.3vh;
+  font-size: 20px;
+  line-height: 120%;
   color: #26252A;
 }
 
 .future .advice_item .descr{
-  padding: 40px;
-  padding-top: 0px;
+  padding: 40px 30px;
+  padding-top: 40px;
   font-family: 'Circe';
   font-weight: 700;
   font-size: 2vh;
   line-height: 130%;
   color: rgba(38, 37, 42, 0.7);
-}
-
-.container_1{
-  margin: 0px;
-  padding: 0px;
 }
 
 /* slider */
